{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 443,
  "lineage": "96b4f29a-20f3-3e60-a068-7ed4b408bc53",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "jitsi-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065788519768:vpc/vpc-080a047018a9d9e8d",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08b8867d4f6c78806",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f995f3744d897eed",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080a047018a9d9e8d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079d38d51c4267df4",
            "owner_id": "065788519768",
            "tags": {
              "Name": "vpc-jitsi",
              "env": "dev",
              "purpose": "jitsi"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "jitsi-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:loadbalancer/app/jitsi-alb/60b838f3fc69b193",
            "arn_suffix": "app/jitsi-alb/60b838f3fc69b193",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jitsi-alb-959939324.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:loadbalancer/app/jitsi-alb/60b838f3fc69b193",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jitsi-alb",
            "security_groups": [
              "sg-0f06b7512dcbcc0c4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-097e1a3a03010b9f2"
              },
              {
                "subnet_id": "subnet-09b80151bc68ed018"
              }
            ],
            "subnets": [
              "subnet-097e1a3a03010b9f2",
              "subnet-09b80151bc68ed018"
            ],
            "tags_all": {
              "env": "dev",
              "purpose": "jitsi"
            },
            "vpc_id": "vpc-080a047018a9d9e8d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "data.aws_subnet_ids.public-subnets",
            "data.aws_vpc.jitsi-vpc",
            "module.alb.aws_security_group.alb-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:listener/app/jitsi-alb/60b838f3fc69b193/10b7c228e4f57651",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:targetgroup/jitsi-alb-tg/d95936333b197d25",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:listener/app/jitsi-alb/60b838f3fc69b193/10b7c228e4f57651",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:loadbalancer/app/jitsi-alb/60b838f3fc69b193",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "env": "dev",
              "purpose": "jitsi"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb_target_group.alb-tg",
            "module.alb.aws_security_group.alb-security-group",
            "data.aws_subnet_ids.public-subnets",
            "data.aws_vpc.jitsi-vpc",
            "module.alb.aws_alb.jitsi-alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:targetgroup/jitsi-alb-tg/d95936333b197d25",
            "arn_suffix": "targetgroup/jitsi-alb-tg/d95936333b197d25",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:065788519768:targetgroup/jitsi-alb-tg/d95936333b197d25",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jitsi-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "env": "dev",
              "purpose": "jitsi"
            },
            "target_type": "instance",
            "vpc_id": "vpc-080a047018a9d9e8d"
          },
          "dependencies": [
            "data.aws_vpc.jitsi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065788519768:security-group/sg-0f06b7512dcbcc0c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f06b7512dcbcc0c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jitsi-alb-sg",
            "name_prefix": "",
            "owner_id": "065788519768",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "dev",
              "purpose": "jitsi"
            },
            "timeouts": null,
            "vpc_id": "vpc-080a047018a9d9e8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.jitsi-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065788519768:security-group/sg-0f9f366dc51f7ab0a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9f366dc51f7ab0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jitsi-asg-sg",
            "name_prefix": "",
            "owner_id": "065788519768",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "dev",
              "purpose": "jitsi"
            },
            "timeouts": null,
            "vpc_id": "vpc-080a047018a9d9e8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.jitsi-vpc",
            "module.alb.aws_security_group.alb-security-group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jitsi-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065788519768:security-group/sg-0606bc43405809b50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0606bc43405809b50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f06b7512dcbcc0c4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jitsi-sg",
            "name_prefix": "",
            "owner_id": "065788519768",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "dev",
              "purpose": "jitsi"
            },
            "timeouts": null,
            "vpc_id": "vpc-080a047018a9d9e8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb-security-group",
            "data.aws_vpc.jitsi-vpc",
            "module.alb.aws_lb_target_group.alb-tg"
          ]
        }
      ]
    }
  ]
}